<resources>
    <string name="app_name">InspireHubTask</string>
    <string name="hyperlink"><b>أضغط</b> <a href="https://www.mawdoo3.com">https://www.mawdoo3.com /أجمل القصص القصيرة</a> </string>
    <string name="resource"><b>لزيارة المصدر </b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--fragmentDetails-->

    <string name="txt1">الحمامتان والسلحفاة</string>
    <string name="textDetails1">يُحكى أن حمامتان جميلتان قررتا السفر والابتعاد عن الغدير الذي عاشتا إلى جانبه طويلاً بسبب شح الماء فيه، فحزنت صديقتهما السلحفاة وطلبت منهما أن تأخذاها معهما، فأجابتها الحمامتان بأنها لا تستطيع الطيران، بكت السلحفاة كثيراً وتوسلتهما بأن تجدا طريقة لنقلها معهما، فكرت الحمامتان كثيراً وقررتا حملها معهما، فأحضرتا عوداً قوياً أمسكت كل واحدة منهما به من طرف وطلبتا من السلحفاة أن تعض على هذا العود حتى تطيرا بها، وحذرتاها من أن تفتح فمها مهما كلّف الأمر لأن ذلك سيؤدي إلى سقوطها. وافقت السلحفاة على ذلك ووعدتهما بأن تنفذ ما طلبتاه منها، وطارت الحمامتان فوق الغابة، إلى أن رأى بعض الناس الحمامتين والسلحفاة فقالوا: يا للعجب حمامتان تحملان سلحفاة وتطيران بها!! لم تستطع السلحفاة تمالك نفسها فقالت: فقأ الله أعينكم ما دخلكم أنتم! فسقطت بعد أن أفلتت العود من فمها وتكسرت أضلعها وقالت باكية: هذه هي نتيجة كثرة الكلام وعدم الوفاء بالوعد.</string>
    <string name="txt2"> غاندي وفردة الحذاء</string>
    <string name="textDetails2"> يُحكى أنّ المهاتما غاندي كان يركض بسرعةٍ ليلحق بالقطار، والذي كان قد بدأ بالتحرك، ولكنّ إحدى فردتي حذائه سقطت أثناء صعودِه على متن القطار، فخلع فردة حذائه الثّانية، ورماها قريباً من الفردة الأولى، فاستغرب أصدقاؤه وسألوه: "لماذا رميت فردة حذائك الأخرى؟" فقال غاندي: "أردتُ للفقير الذي يجد الحذاء أن يجد الفردتين كي يكون قادراً على استخدامهما، فهو لن يستفيد إن وجد فردةً واحدةً، كما أنّني لن أستفيد منها أيضاً!</string>
    <string name="txt3"> الحسود والبخيل</string>
    <string name="textDetails3"> وقف بخيلٌ و<font color="#FF0000">حسودٌ</font> أمام ملك، فقال لهما: "اطلبا أيّ شيءٍ تريدانه، وسأعطي الثّاني ضعف طلب الأوّل". لم يكن أيّ منهما يريد للآخر أن يأخذ أكثر منه، فأخذا يتشاجران طويلاً، ويطلبُ كلٌّ منهما من الآخر أن يطلب أولاً، فقال الملك: "إن لم تفعلا ما آمركما به قطعت رأسيكما". فقال الحسود للملك: "يا مولاي اقلع إحدى عينيّ!"</string>
    <string name="txt4">  نعل الملك </string>
    <string name="textDetails4">يُقال إنّ ملكاً كان يحكم دولةً واسعةً وكبيرةً جدّاً، وأراد هذا الملك يوماً ما أن يخرج في رحلة طويلة، ولكنّ قدميه تورمتا وآلمتاه خلال الرحلة، فقد مشى كثيراً في الطّرق الوعرة، ولذلك فقد أصدر قراراً ينصّ على تغطية جميع شوارع دولته بالجلد، ولكنّ أحد مستشاريه كان ذكياً، فأشار عليه برأيٍ سديد، وهو وضع قطعةٍ صغيرةٍ من الجلد تحت قدمي الملك فقط، فكانت هذه بداية نعل الأحذية.</string>
    <string name="txt5"> الأحمق والصبي</string>
    <string name="textDetails5"> يُروى أنّ مغفّلاً خرج من منزله يحمل على عاتقه صبيّاً عليه قميصٌ أحمر، فمشى به، ثمّ نسيه، فجعل يقول لكلّ من يراه: "أرأيت صبيّاً عليه قميصٌ أحمر؟" فقال أحدهم: "لعلّه هذا الصبيُّ الذي تحمله على كتفيك". فرفع رأسه، ونظر إلى الصبي، وقال له بغضب: "ألم أقل لك ألّا تفارقني؟" </string>
    <string name="txt6">  درهم في الصحراء</string>
    <string name="textDetails6">مرّ رجلٌ بآخر يحفر في الصحراء، فقال له: "ما بك أيّها الرجل، ولماذا تحفر في الصحراء؟" قال: "إنّي دفنت في هذه الصحراء بعضاً من المال، ولست أهتدي إلى مكانه"، فقال له: "كان يجب أن تجعل عليه علامة". قال: "قد فعلت". قال: "وما هي العلامة؟" قال: "غيمةٌ في السماء كانت تظلّها، ولست أرى العلامة الآن".</string>
    <string name="txt7"> الإعلان والأعمى</string>
    <string name="textDetails7"> جلس رجل أعمى على رصيفٍ في أحد الشوارع، ووضع قبّعته أمامه، وبجانبه لوحة مكتوب عليها: "أنا رجلٌ أعمى، أرجوكم ساعدوني"، فمرّ رجل إعلانات بالشارع الذي يجلس فيه الأعمى، فوجد أنّ قبّعته لا تحتوي سوى على القليل من المال، فوضع بعض النقود في القبّعة، ثمّ -ودون أن يستأذن الأعمى- أخذ اللوحة التي بجانبه وكتب عليها عبارةً أخرى، ثمّ أعادها إلى مكانها وغادر. بدأ الأعمى يلاحظ أنّ قبّعته امتلأت بالنقود، فعرف أنّ السبب هو ما فعله ذلك الرجل بلوحته، فسأل أحد المارة عمّا كُتب على اللوحة، فكانت الآتي: "إنّنا في فصل الربيع، ولكنّني لا أستطيع رؤية جماله!".</string>
    <string name="txt8"> حكاية النسر</string>
    <string name="textDetails8"> كان هناك أنثى نسرٍ تعيش على قمم إحدى الجبال، وتضع عشّها على واحدةٍ من الأشجار المنتشرة على ذاك الجبل، وفي يومٍ من الأيام باضت أنثى النسر أربع بيضات، إلّا أنّ زلزالاً عنيفاً هزّ الجبل، فسقطت إحدى البيضات من العشّ، ثمّ تدحرجت إلى الأسفل حتى استقرّت في قنّ للدجاج، فأخذتها إحدى الدجاجات واحتضنتها حتى فقست، وخرج منها نسرٌ صغير. ربّت الدجاجات فرخ النسر مع فراخهنّ، فبدأ يكبر مع فراخ الدجاج ويتعلّم معها، وطوال هذا الوقت ظلّ يظنّ أنّه دجاجة، وفي أحد الأيّام كان النسر الصغير يلعب مع فراخ الدجاج في الساحة، فرأى مجموعةً من النّسور تحلق عالياً، فتمنّى لو أنه يستطيع الطيران مثلها، لكنّ الدجاجات بدأن بالسخرية والاستهزاء منه، وقالت له إحدى الدجاجات: "أنت دجاجة، ولن تستطيع التّحليق كالنّسور"، حزن النسر الصغير كثيراً، ولكنّه استسلم ونسي حلمه بالتّحليق في السماء، ولم يلبث أن مات بعد أن عاش حياةً طويلةً كحياة الدّجاج.</string>
    <string name="txt9"> القناعة كنز لا يفنى</string>
    <string name="textDetails9"> لا يفنى جاء في القصص القديمة أنّ ملكاً أراد أن يكافئ أحدَ مُواطنيه، فقال له: "امتلك من الأرض كلّ المساحات التي تستطيع أن تقطعها سيراً على قدميك"، ففرح الرجل وشرع يمشي في الأرض مسرعاً ومهرولاً بجنون، وسار مسافةً طويلةً فتعب، ففكّر في العودة إلى الملك كي يمنحه مساحة الأرض التي قطعها، ولكنّه غيّر رأيه، فقد شعر أنّه يستطيع قطع مسافةٍ أكبر، وعزم على مواصلة السّير، فسار مسافاتٍ طويلة، وفكّر في العودة إلى الملك مكتفياً بالمسافة التي قطعها، إلّا أنّه تردّد مرّةً أخرى، وقرّر أن يواصل السّير حتى يحصل على المزيد. ظلّ الرّجل يسير أياماً وليالي، ولم يعد أبداً، إذ يُقال إنّه قد ضلّ طريقه وضاع في الحياة، ويقال إنه مات من شدة إنهاكه وتعبه، ولم يمتلك شيئاً، ولم يشعر بالاكتفاء أو السّعادة أبداً، فقد أضاع كنزاً ثميناً، وهو القناعة؛ فالقناعة كنزٌ لا يفنى..</string>


</resources>