<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentDetails">

    <!-- TODO: Update blank fragment layout -->

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView">
    <LinearLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30sp"
        android:padding="20sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt1"
            android:textAlignment="center"
            android:textColor="?android:attr/colorPressedHighlight" />
        <TextView
            android:id="@+id/textview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/textDetails1"
            />

        <TextView
            android:id="@+id/textview3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/txt2"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_secondary" />
        <TextView
            android:id="@+id/textview4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/textDetails2" />

        <TextView
            android:id="@+id/textview5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/txt3"
            android:textAlignment="center"
            android:textColor="?attr/colorSecondaryVariant" />
        <TextView
            android:id="@+id/textview6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/textDetails3" />
        <TextView
            android:id="@+id/textview7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="30sp"
            android:textColor="?attr/colorSecondaryVariant"
            android:text="@string/txt4" />
        <TextView
            android:id="@+id/textview8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/textDetails4" />
        <TextView
            android:id="@+id/textview9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="30sp"
            android:textColor="?attr/colorSecondaryVariant"
            android:text="@string/txt5" />
        <TextView
            android:id="@+id/textview10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/textDetails5" />
        <TextView
            android:id="@+id/textview11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="30sp"
            android:textColor="?attr/colorSecondaryVariant"
            android:text="@string/txt6" />
        <TextView
            android:id="@+id/textview12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/textDetails6" />
        <TextView
            android:id="@+id/textview13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="30sp"
            android:textColor="?attr/colorSecondaryVariant"
            android:text="@string/txt7" />
        <TextView
            android:id="@+id/textview14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/textDetails7" />
        <TextView
            android:id="@+id/textview15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="30sp"
            android:textColor="?attr/colorSecondaryVariant"
            android:text="@string/txt8" />
        <TextView
            android:id="@+id/textview16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/textDetails8" />
        <TextView
            android:id="@+id/textview17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="30sp"
            android:textColor="?attr/colorSecondaryVariant"
            android:text="@string/txt9" />
        <TextView
            android:id="@+id/textview18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/textDetails9" />
    </LinearLayout>
</ScrollView>
</FrameLayout>